# Dictorium

./: .gitignore  CMakeLists.txt  README.md
docs/: CONVENTIONS.md  REQUIREMENTS.md
docs/Algorithms/: ChainingHashAlgorithm.md  LinearProbingAlgorithm.md  PerfectHashAlgorithm.md
docs/Entities/: AvlDictionary.md  ChainingHashDictionary.md  CuckooHashDictionary.md  LinearDictionary.md  LinearProbingDictionary.md  PerfectHashDictionary.md
include/Dictorium/: Dictorium.h
include/Dictorium/Contracts/: Concepts.h  Contracts.h  DictProxy.h  IBalancedTreeDictionary.h  IDictionary.h  IEnumerable.h  IFormattable.h  ItemsRange.h
include/Dictorium/Contracts/IEnumerable/: IEnumerable.h  Iterator.h  LinearEnumerator.h  Range.h
include/Dictorium/Entities/: AvlDictionary.h  ChainingHashDictionary.h  Console.h  CuckooHashDictionary.h  LinearDictionary.h  LinearProbingDictionary.h  PerfectHashDictionary.h
src/: dtr.cpp
src/AvlDictionary/: AvlDictionary.tpp  AvlDictionaryBalance.tpp  AvlDictionaryGetters.tpp  AvlDictionarySetters.tpp
src/ChainingHashDictionary/: ChainingHashDictionary.tpp
src/CuckooHashDictionary/: CuckooHashBuild.tpp  CuckooHashGetters.tpp  CuckooHashIterator.tpp  CuckooHashSetters.tpp
src/LinearDictionary/: LinearDictionary.tpp  LinearDictionaryGetters.tpp  LinearDictionarySetters.tpp  LinearEnumerator.tpp
src/LinearProbingDictionary/: LinearProbingDictionary.tpp
src/PerfectHashDictionary/: PerfectHashDictionary.tpp  PerfectHashDictionaryBuild.tpp  PerfectHashDictionaryGetters.tpp  PerfectHashDictionarySetters.tpp  PerfectHashIterator.tpp
tests/: AvlPerfTest.cpp  AvlTest.cpp  ChainingTest.cpp  PerfTest.cpp  main.cpp  test.cpp
tests/Utils/: PrintUtils.cpp  TestUtils.cpp  TestUtils.h
